Test/Int/Cong.expected
goal: x = y → f x = f y

query:
(declare-fun f (Int) Int)
(declare-const x Int)
(declare-const y Int)
(assert (not (=> (= x y) (= (f x) (f y)))))
(check-sat)

result: unsat
Test/Int/Cong.lean:5:2: error: no goals to be solved
